<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".RegistrarPersona">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/Txt_NombrePers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_NombrePers"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/Txt_ApellidoPers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_ApellidoPers"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/TxtEmailPers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_emailPers"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/TxtPasswordRegProfe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_passwordProfe"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/botonRegistrarEmpresaPers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/registrarPers" />





    </LinearLayout>

</RelativeLayout>